--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,24 @@
+/* Header */
+#logo {
+  object-fit:fill;
+  height:100%;
+  overflow:hidden;
+}
+#logo img {
+  object-fit:cover;
+  width:100%;
+  height:100%
+}
+#responsive-img {
+  object-fit:fill;
+  width:100%;
+  overflow:hidden;
+}
+#responsive-img img{
+  object-fit:cover;
+  width:100%;
+  height:100%;
+}
 section {
   margin-bottom: 1rem
 }
